--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:title" content="ابزار تولید رمز عبور امن | ساخت رمز عبور قوی و ایمن" />
-  <meta name="twitter:description" content="ابزار آنلاین و رایگان برای ساخت رمز عبور قوی، ایمن و تصادفی" />
-  <link rel="canonical" href="https://shayanloo.ir/webapp/password-generator/" />
+  <meta name="twitter:description" content="ابزار رایگان برای ساخت رمز عبور قوی، ایمن و تصادفی" />
+  <link rel="canonical" href="https://shayanloo.ir/webapp/password-generator" />
 </head>
 
 <body>
